--- a/index.html
+++ b/index.html
@@ -116,6 +116,16 @@
                 <a href="https://tu-dominio.com/apps/calculadora.apk" class="download-btn" download>Descargar APK</a>
             </li>
 
+                    <img src="https://github.com/CafesitoCode/cafesitocode/blob/main/Grafico%20de%20funcion%20Calc.%20De%20Prestamos.png?raw=true" alt="Calculadora de Préstamos" class="promo-image" />
+
+        <ul class="app-list">
+            <!-- Sección 1 - Calculadora Simple -->
+            <li class="app-item">
+                <h2>App 1 - Calculadora Simple</h2>
+                <p>Una calculadora sencilla para realizar operaciones básicas. Fácil y rápida.</p>
+                <a href="https://tu-dominio.com/apps/calculadora.apk" class="download-btn" download>Descargar APK</a>
+            </li>
+
             <!-- Sección 2 - Calculadora de Préstamos -->
             <li class="app-item">
                 <h2>App 2 - Calculadora de Préstamos</h2>
