--- a/index.html
+++ b/index.html
@@ -60,27 +60,32 @@
         }
 
         .fila3 {
-            background-color: #FF9800;
-            height: 400px;
-            width: 100%;
-            color: white;
-            text-align: center;
-            padding: 40px 20px;
-        }
+    background-color: rgba(255, 255, 255, 0.85); /* Blanco con opacidad */
+    height: 400px;
+    width: 100%;
+    color: #000; /* Texto oscuro para que contraste con el fondo blanco */
+    text-align: center;
+    padding: 40px 20px;
+    border-radius: 0 0 15px 15px; /* Opcional: bordes redondeados abajo */
+    box-shadow: 0 -4px 12px rgba(0, 0, 0, 0.1); /* Sombra sutil arriba */
+}
+
 
         .download-btn {
-            display: inline-block;
-            margin-top: 20px;
-            padding: 12px 24px;
-            background-color: #24292e;
-            color: white;
-            text-decoration: none;
-            border-radius: 6px;
-        }
+    display: inline-block;
+    margin-top: 20px;
+    padding: 12px 24px;
+    background-color: #4CAF50; /* Verde */
+    color: white;
+    text-decoration: none;
+    border-radius: 6px;
+    font-weight: bold;
+    transition: background-color 0.3s ease;
+}
 
         .download-btn:hover {
-            background-color: #000;
-        }
+    background-color: #388E3C; /* Verde más oscuro al pasar el mouse */
+}
     </style>
 </head>
 <body>
