--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                 </ul>
             </div>
             <div class="derecha">
-                <img src="https://github.com/CafesitoCode/cafesitocode/blob/main/Grafico%20de%20funcion%20Calc.%20De%20Prestamos.png?raw=true" alt="Calculadora de Préstamos" class="promo-image" />
+                <img src="https://github.com/CafesitoCode/cafesitocode/blob/main/Grafico%20de%20funcion%20Calc.%20De%20Prestamos%202.png?raw=true" alt="Calculadora de Préstamos" class="promo-image" />
             </div>
         </div>
 
