--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
             display: flex;
             align-items: center;
             justify-content: center;
+            background-repeat: no-repeat;
+            background-size: cover;
         }
 
         /* NUEVO ESTILO PARA .fila3 */
@@ -64,6 +66,7 @@
             background-color: rgba(255, 255, 255, 0.85);
             padding: 20px 30px;
             box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+            
         }
 
         .contenido-app {
@@ -115,7 +118,7 @@
         </header>
 
         <div class="fila2">
-            <div class="izquierda">
+            <div class="izquierda" >
                 <h2>Características principales</h2>
                 <ul>
                     <li>📱 Interfaz fácil de usar</li>
@@ -125,8 +128,8 @@
                     <li>🌙 Modo oscuro disponible</li>
                 </ul>
             </div>
-            <div class="derecha">
-                <img src="https://github.com/CafesitoCode/cafesitocode/blob/main/Grafico%20de%20funcion%20Calc.%20De%20Prestamos%202.png?raw=true" alt="Calculadora de Préstamos" class="promo-image" />
+            <div class="derecha" style="background-image: url('https://github.com/CafesitoCode/cafesitocode/blob/main/Grafico%20de%20funcion%20Calc.%20De%20Prestamos%202.png?raw=true');">
+               
             </div>
         </div>
 
