--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@ height:60px;
            
                 <!-- NOTA: Deje este espacio para poner un boton para reproducir videos sobre la app -->
                
-               <video width="200" height="400" controls poster="miniatura.jpg">
+               <video width="200" height="400" controls poster="Miniatura para video.png">
   <source src="Video calculadora en Ingles.mp4" type="video/mp4">
   Tu navegador no soporta la reproducción de video.
 </video>
