--- a/index.html
+++ b/index.html
@@ -209,9 +209,9 @@ height:60px;
                 <div class="info-texto">
                     <h2>App 2 - Calculadora de Préstamos</h2>
                     <p>Calcule sus préstamos fácilmente con esta app especializada. Rápida, simple y práctica.</p>
-                </div>
-                <a href="https://tu-dominio.com/apps/prestamos.apk" class="download-btn" download>Descargar APK</a>
-            </div>
+           </div>
+               <a href="https://github.com/CafesitoCode/CalduladoraDePrestamos.apk/releases/download/v1.0/CalculadoraDePrestamos.apk" class="download-btn" download>Descargar APK</a>
+           </div>
         </div>
    </footer>
    
